--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
             align-items: center;
             background: #153142;
         }
-        video {
+        img {
             width: 100px;
             height: 100px;
         }
@@ -164,8 +164,7 @@
         <a class='btn' href='https://www.graph.cool/docs/'>Read our Docs</a>
     </div>
     <div class="desktop-loading-content">
-        <video src="/loading.mp4" loop autoplay>
-        </video>
+        <img src='/loading.gif' alt=''>
     </div>
 </div>
 </body>
