--- a/src/index.html
+++ b/src/index.html
@@ -51,28 +51,28 @@
         body {
             margin: 0;
             padding: 0;
+            height: 100%;
+            width: 100%;
         }
-        .mobile-loading-content, .desktop-loading-content {
+        .mobile-loading-content {
             font-family: 'Open Sans', sans-serif;
             width: 100vw;
             height: 100vh;
             padding: 38px;
             box-sizing: border-box;
+            background: radial-gradient(circle at 49% 49%, #172a3a, #0f202d);
         }
         .logos {
             width: 100%;
             display: flex;
             justify-content: space-between;
         }
-        .mobile-loading-content {
-            background: radial-gradient(circle at 49% 49%, #172a3a, #0f202d);
-        }
         .mobile-loading-content h1 {
             font-size: 30px;
             color: white;
             font-weight: 600;
             margin-top: 60px;
-            letter-spacing:
+            max-width: 520px;
         }
         .mobile-loading-content p {
             margin-top: 25px;
@@ -82,6 +82,7 @@
             text-align: left;
             color: #ffffff;
             font-weight: 400;
+            max-width: 520px;
         }
         .btn {
             border-radius: 2px;
@@ -100,8 +101,45 @@
             background: #27ae60;
             color: white;
         }
-        .btn + .btn {
-            margin-left: 25px;
+        .btn:first-of-type {
+            margin-right: 25px;
+        }
+        @media (max-width: 520px) {
+            div.sad {
+                position: absolute;
+                top: 38px;
+                right: 38px;
+            }
+            div.sad svg {
+                width: 48.88px;
+                height: 38.87px;
+            }
+        }
+        @media (min-width: 521px) {
+            .sad {
+                margin-top: 60px;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .sad svg {
+                width: 84.8px;
+                height: 68.2px;
+            }
+            .mobile-loading-content h1 {
+                font-size: 32px;
+                text-align: center;
+            }
+            .mobile-loading-content {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+            .mobile-loading-content p {
+                text-align: center;
+                font-size: 20px;
+            }
         }
         @media (min-width: 720px) {
             .mobile-loading-content {
@@ -109,6 +147,8 @@
             }
         }
         .desktop-loading-content {
+            width: 100vw;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -130,7 +170,9 @@
                 L11.74,15.6c-1.43,0.83-2.31,2.35-2.31,4v12.68c0,1.65,0.88,3.18,2.3,4l10.96,6.35c1.43,0.82,3.18,0.82,4.61,0l10.96-6.35
                 c1.42-0.83,2.3-2.35,2.3-4v-9.22h0.01C40.63,20.91,40.05,19.47,38.87,18.81" fill='#27ae60' />
             </svg>
-            <svg x="0px" y="0px" width="48.88px" height="38.87px" viewBox="0 0 48.88 38.87" style="enable-background:new 0 0 48.88 38.87;" xml:space="preserve">
+        </div>
+        <div class="sad">
+            <svg x="0px" y="0px" viewBox="0 0 48.88 38.87" style="enable-background:new 0 0 48.88 38.87;" xml:space="preserve">
                     <style type="text/css">
                     .st0 {
                         opacity: 0.5;
